<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="program">"World's 1st Flying Car Nanodegree"</string>
    <string name="web">www.udacity.com</string>
    <string name="name">Udacity</string>
    <string name="street">2465 Latham St</string>
    <string name="city">Mountain View, CA 94043</string>
    <string name="phone">650\-555\-5555</string>
    <string name="image_flying_car">Flying Car</string>
</resources>
