<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <ImageView
        android:id="@+id/car"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/flyingcar" />

    <TextView
        android:id="@+id/program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textStyle="bold"
        android:background="#10000000"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:paddingTop="52dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/program" />

    <TextView
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="4dp"
        android:layout_below="@id/program"
        android:textSize="24sp"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:background="#50000000"
        android:linksClickable="true"
        android:autoLink="web"
        android:textColorLink="@android:color/white"
        android:text="@string/web" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@id/street"
        android:layout_marginRight="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:text="@string/name" />

    <TextView
        android:id="@+id/street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/city"
        android:layout_alignParentRight="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:text="@string/street" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/phone"
        android:layout_alignParentRight="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:text="@string/city" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textColorLink="@android:color/white"
        android:linksClickable="true"
        android:autoLink="phone"
        android:text="@string/phone" />
</RelativeLayout>